--- a/config.ini
+++ b/config.ini
@@ -1,28 +1,22 @@
-#Ä¬ÈÏ±£´æµØÖ·Îª¿Õ ±£´æÄ¿Â¼ÎªÈí¼şÏÂµÄDownloadÄ¿Â¼
-#±£´æÄ¿Â¼¿É×ÔĞĞÅäÖÃ Àı£ºD:\Download
+#é»˜è®¤ä¿å­˜åœ°å€ä¸ºç©º ä¿å­˜ç›®å½•ä¸ºè½¯ä»¶ä¸‹çš„Downloadç›®å½•
+#ä¿å­˜ç›®å½•å¯è‡ªè¡Œé…ç½® ä¾‹ï¼šD:\Download
 [dirpath]
-dirpath=H:\New folder\[¶¯Âş±¾×Ó]\Fate
+dirpath=D:\repositories\EH_Spyder\download
 
-#Í¼Æ¬ÏÂÔØ²¢·¢ÊıÉÏÏŞ
+#å›¾ç‰‡ä¸‹è½½å¹¶å‘æ•°ä¸Šé™
 [sysinfo]
-max_threading=15
+max_threading=10
 
-#ExhentaiÕËºÅĞÅÏ¢
-[userinfo]
-igneous:df9724040
-ipb_member_id:4483572
-ipb_pass_hash:b1d7d5acd649a01a1643124c8a0918a8
-
-#´úÀíÉèÖÃ true Îª¿ª false Îª¹Ø
-[proxy]
-bool=false
-modle=socks5
-ip=127.0.0.1
-port=1088
+#ä»£ç†è®¾ç½® true ä¸ºå¼€ false ä¸ºå…³
+; [proxy]
+; bool=true
+; modle=socks5
+; ip=127.0.0.1
+; port=10808
 [headers]
 User-Agent=Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.1.6) Gecko/20091201 Firefox/3.5.6
 
-#ÊÇ·ñ´ò°üÑ¹Ëõ
+#æ˜¯å¦æ‰“åŒ…å‹ç¼©
 [pack]
 bool=true
 model=zip
